--- a/package.json
+++ b/package.json
@@ -4,26 +4,29 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "prestart": "npx eslint . --no-ignore",
     "start": "node ./dist/app.js",
-    "dev": "nodemon src/app.ts",
+    "lint": "eslint . --no-ignore",
+    "dev": "node --no-warnings --env-file=.env --import=tsx --watch-path=./src ./src/app.ts",
     "build": "npx rollup -c"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@builderbot-plugins/telegram": "^1.0.0",
-    "@builderbot/bot": "1.0.6-alpha.0",
-    "@builderbot/provider-baileys": "1.0.6-alpha.0",
+    "@builderbot-plugins/wali": "^1.0.2",
+    "@builderbot/bot": "1.2.2",
+    "@builderbot/provider-baileys": "^1.2.2",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "date-fns": "^3.3.1",
+    "date-fns-tz": "3.0.0-beta.2",
     "dotenv": "^16.4.2",
+    "fluent-ffmpeg": "^2.1.2",
     "multer": "1.4.5-lts.1",
     "openai": "^4.27.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0",
     "@rollup/plugin-terser": "^0.4.4",
+    "@types/node": "^20.12.8",
     "eslint": "^8.52.0",
     "eslint-plugin-builderbot": "1.0.6-alpha.0",
     "rollup": "^4.10.0",
